[gd_scene load_steps=5 format=3 uid="uid://c4ytscarwinwx"]

[ext_resource type="Texture2D" uid="uid://dt2wpt2whplhg" path="res://Sprites/turret.png" id="1_70war"]
[ext_resource type="Script" path="res://Objects/turret.gd" id="1_q17hu"]
[ext_resource type="AudioStream" uid="uid://cij1ns1pe68sd" path="res://Execute_01.wav" id="3_2exvl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jg8po"]
radius = 144.347

[node name="Turret" type="Area2D"]
script = ExtResource("1_q17hu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jg8po")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_70war")

[node name="Gun1" type="Marker2D" parent="."]

[node name="Gun2" type="Marker2D" parent="."]

[node name="Gun3" type="Marker2D" parent="."]

[node name="Gun4" type="Marker2D" parent="."]

[node name="TurretSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_2exvl")
volume_db = -20.0
